--- a/style.css
+++ b/style.css
@@ -174,8 +174,8 @@ input[type="text"] {
     }
    .arrow{
       position: absolute;
-      margin-top: 400px;
-     margin-right: 60px;
+      margin-top: 120px;
+     margin-left: 90px;
       display: inline-block;    
       size: 1px;
       
