--- a/style.css
+++ b/style.css
@@ -174,8 +174,8 @@ input[type="text"] {
     }
    .arrow{
       position: absolute;
-      margin-top: 120px;
-     margin-left: 90px;
+      margin-top: 450px;
+     margin-right: 80px;
       display: inline-block;    
       size: 1px;
       
